--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "lib-playgroud",
   "version": "1.0.1",
   "description": "",
-  "main": "index.js",
+  "main": "./dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "run:zod": "ts-node",
-    "bump": "pnpm version"
+    "run:zod": "ts-node ./src/zod/index.ts",
+    "bump": "pnpm version",
+    "build:zod": "ncc build ./src/zod/index.ts -o dist"
   },
   "keywords": [],
   "author": "",
@@ -16,6 +17,7 @@
     "zod": "^3.24.4"
   },
   "devDependencies": {
+    "@vercel/ncc": "^0.38.3",
     "typescript": "^5.8.3"
   }
 }
