--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "zod": "^3.24.4"
   },
   "devDependencies": {
+    "@actions/core": "^1.11.1",
     "@vercel/ncc": "^0.38.3",
     "typescript": "^5.8.3"
   }
