feat: add output to our action

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,3 +11,5 @@ jobs:
     - uses: ./
       with:
         script: 'playground'
+      id: result
+    - run: echo ${{ steps.result.outputs.result }}
